make some changes

--- a/src/index.html
+++ b/src/index.html
@@ -69,15 +69,13 @@
             <p class="about-wrapper__info-text">
               I am a Backend Engineer with expertise in building robust and scalable web applications using Node.js and
               Express. With a strong focus on API development and system integration, I possess a deep understanding of
-              backend technologies and architectural patterns.
-
+              backend technologies and architectural patterns. 
+            </p>
+            <p class="about-wrapper__info-text">
               Additionally, I possess a strong understanding of software development methodologies and agile practices.
               I am comfortable collaborating with cross-functional teams, including front-end developers, UX designers,
               and product managers, to ensure the successful delivery of projects. I am skilled in analyzing
               requirements, designing technical solutions, and implementing them with meticulous attention to detail
-            </p>
-            <p class="about-wrapper__info-text">
-              Extra Information about you! like hobbies and your goals.
             </p>
             <!-- <span class="d-flex mt-3">
                 <a
@@ -266,9 +264,8 @@
     <div class="container">
       <h2 class="section-title">Contact</h2>
       <div class="contact-wrapper load-hidden">
-        <p class="contact-wrapper__text">[Put your call to action here]</p>
-        <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="mailto:example@email.com">Call to
-          Action</a>
+        <p class="contact-wrapper__text">Reach Me!</p>
+        <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="mailto:hello.prioarief@gmail.com">Email</a>
       </div>
     </div>
   </section>
@@ -281,13 +278,10 @@
         <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
       </a>
       <div class="social-links">
-        <a rel="noreferrer" href="#!" target="_blank">
-          <i class="fa fa-twitter fa-inverse"></i>
-        </a>
-        <a rel="noreferrer" href="#!" target="_blank">
+        <a rel="noreferrer" href="https://www.linkedin.com/in/prioarief" target="_blank">
           <i class="fa fa-linkedin fa-inverse"></i>
         </a>
-        <a rel="noreferrer" href="#!" target="_blank">
+        <a rel="noreferrer" href="https://www.github.com/prioarief" target="_blank">
           <i class="fa fa-github fa-inverse"></i>
         </a>
       </div>
@@ -296,7 +290,7 @@
 
       <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
       <p class="footer__text">
-        © 2021 - Template developed by Prio Arief Gunawan
+        ©2024 - Template developed by Prio Arief Gunawan
       </p>
     </div>
   </footer>
