--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__image load-hidden">
             <img alt="Profile Image" class="img-fluid rounded shadow-lg" height="auto" width="300px"
-              src="assets/profile.jpg" alt="Profile Image" />
+              src="http://www.gravatar.com/avatar" alt="Profile Image" />
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
@@ -290,7 +290,7 @@
 
       <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
       <p class="footer__text">
-        ©2024 - Template developed by Prio Arief Gunawan
+        ©2024 - Build With ❤️
       </p>
     </div>
   </footer>
