--- a/src/index.html
+++ b/src/index.html
@@ -58,13 +58,13 @@
     <div class="container">
       <h2 class="section-title load-hidden">About me</h2>
       <div class="row about-wrapper">
-        <div class="col-md-6 col-sm-12">
+        <!-- <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__image load-hidden">
             <img alt="Profile Image" class="img-fluid rounded shadow-lg" height="auto" width="300px"
               src="http://www.gravatar.com/avatar" alt="Profile Image" />
           </div>
-        </div>
-        <div class="col-md-6 col-sm-12">
+        </div> -->
+        <div class="col-md-12 col-sm-12">
           <div class="about-wrapper__info load-hidden">
             <p class="about-wrapper__info-text">
               I am a Backend Engineer with expertise in building robust and scalable web applications using Node.js and
